@@ -2,6 +2,10 @@
 
 	* Fixed bug #35679:Index queue broken by new indexing priority feature, credits Michiel Roos
 
+2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
+
+	* Fix issue #35339: Index Queue error
+
 2012-06-15  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Fixed a bug in status report configuration check that crashed the status report when a site was not configred correctly
